[tool.poetry]
name = "pynix"
version = "0.1.0"
description = "Utility functions for working with Nix in Python"
authors = ["adisbladis <adam.hose@tweag.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
dacite = "^1.6.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
