[tool.poetry]
name = "pynixutil"
version = "0.1.0"
description = "Utility functions for working with Nix in Python"
authors = ["adisbladis <adam.hose@tweag.io>"]
license = "MIT"
homepage = "https://github.com/tweag/pynixutil"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.4"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
