[tool.poetry]
name = "pynixutil"
version = "0.5.0"
description = "Utility functions for working with Nix in Python"
authors = ["adisbladis <adisbladis@gmail.com>"]
license = "MIT"
homepage = "https://github.com/nix-community/pynixutil"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.1.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
